@@ -4,6 +4,7 @@
 
 === 0.5.3 ===
 * Added lltl::bitset collection with basic methods for storing bit flags.
+* Added lltl::phashset collection for quick managing of hash sets of objects.
 
 === 0.5.2 ===
 * Added hash interface for objects.
